Fix margin overlap

--- a/app/assets/stylesheets/api/projects-index.scss
+++ b/app/assets/stylesheets/api/projects-index.scss
@@ -20,7 +20,6 @@
   flex-direction: row;
   width: 850px;
   height: 390px;
-  margin-left: 5%;
 }
 
 .special > .index-item-container > .img-container {
